syntax = "proto3";

package rest;

import "github.com/pmker/yux/common/proto/idm/idm.proto";

message UserStateRequest {
    string Segment = 1;
}

message UserStateResponse {
    repeated idm.Workspace Workspaces = 1;
    map<string,string> WorkspacesAccesses = 2;
}

message RelationRequest {
    string UserId = 1;
}

message RelationResponse {
    repeated idm.Workspace SharedCells = 1;
    repeated idm.Role BelongsToTeams = 3;
}